--- a/action-a/action.yml
+++ b/action-a/action.yml
@@ -3,7 +3,7 @@ description: "Greet someone"
 author: "octocat@github.com"
 
 inputs:
-  MY_NAME:
+  MY_NAME: Tory
     description: "Who to greet"
     required: true
     default: "World"
